RESOLVED FIXED17413
REGRESSION: Latest Nightly doesn't load Java plugin w/Safari 3.1b
https://bugs.webkit.org/show_bug.cgi?id=17413
Summary REGRESSION: Latest Nightly doesn't load Java plugin w/Safari 3.1b
Jon
Reported 2008-02-17 12:20:03 PST
Using the Safari 3.1b and the latest WebKit nightly, all Java content fails to load. However, the plugin works fine when just using the Safari 3.1b. Using the latest Java install for Windows XP from java.com.
Attachments
Robert Blaut
Comment 1 2008-02-17 13:41:43 PST
I cannot confirm the bug. Try to uninstall Java and install it again with Safari turned off.
Robert Blaut
Comment 2 2008-02-17 13:50:35 PST
(In reply to comment #1) > I cannot confirm the bug. Try to uninstall Java and install it again with > Safari turned off. > To fast replay :( After more testing I can confirm the bug as REGRESSION bug. The URL should render Java clock , however Webkit r30236 reports lack of Java installed.
Mark Rowe (bdash)
Comment 3 2008-02-17 19:05:01 PST
Please note that bugs in prerelease seeds of Safari should not be filed via http://bugs.webkit.org/ as they are covered by the ADC agreement with regards to non-disclosure. They should be filed in Radar via http://bugreport.apple.com/.
Mark Rowe (bdash)
Comment 4 2008-02-17 19:05:53 PST
Anders Carlsson
Comment 5 2008-02-22 12:07:07 PST
Committed revision 30482.
Note You need to log in before you can comment on or make changes to this bug.