        Reviewed by Adam.

<rdar://problem/5748781>
        https://bugs.webkit.org/show_bug.cgi?id=17413
        REGRESSION: Latest Nightly doesn't load Java plugin w/Safari 3.1b

        Copy the Java plug-in over to the new location.

        * FindSafari/FindSafari.cpp:
        (_tmain):



Canonical link: https://commits.webkit.org/24206@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@30482 268f45cc-cd09-0410-ab3c-d52691b4dbfc